--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
   "main": "index.js",
   "author": "hetrodo",
   "license": "MIT",
-  "repository": "https://github.com/hetrodoo/hetrodo-hide-console-window-napi"
+  "repository": "https://github.com/hetrodoo/hetrodo-hide-console-window-napi",
+  "keywords": [
+    "Hide",
+    "Show",
+    "Window",
+    "Console",
+    "Console Window"
+  ]
 }
